Added some styles, can take tasks from state and display in correct cells as list

--- a/src/app/day-list-item/day-list-item.component.html
+++ b/src/app/day-list-item/day-list-item.component.html
@@ -1,5 +1,7 @@
-<div>{{date | dateFormat:'DAY_NUMBER'}}</div>
+<div class="cell" [ngClass]="{'cell--inactive': isInactive}">
+    <div class="cell-date">{{date | dateFormat:'DAY_NUMBER'}}</div>
 
-<div class="tasks">
-    <app-task *ngFor="let task of tasks$ | async" [task]="task"></app-task>
+    <div class="tasks">
+        <app-task *ngFor="let task of tasks$ | async" [task]="task"></app-task>
+    </div>
 </div>
