--- a/src/app/days-list/days-list.component.scss
+++ b/src/app/days-list/days-list.component.scss
@@ -1,11 +1,5 @@
 .days-list {
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-
-    &__item {
-        border: 1px solid #ccc;
-        min-height: 100px;
-        padding: 8px;
-    }
+    grid-template-columns: repeat(7, minmax(0, 1fr));
+    grid-template-rows: repeat(6, minmax(0, 1fr));
 }
