--- a/src/app/task/task.component.scss
+++ b/src/app/task/task.component.scss
@@ -2,8 +2,17 @@
     border: 1px solid #ccc;
     background:rgba(32, 129, 240, .52);
     border-radius: 2px;
-    padding: 4px;
+    padding: 4px;    
+    display: flex;
+}
+
+.text {
+    flex: 1 1;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+.delete {
+    width: 24px;
 }
