--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,14 +6,6 @@ body, html {
     font-family: 'Arial';
 }
 
-.left, .right {
-    float:left;
-    width: calc(50% - 6em);
-    padding: 3em;
-}
-
-input[type="text"] {
-    width: 100%;
-    padding: 5px;
-    margin-bottom: 10px;
+* {
+    box-sizing: border-box;
 }
