--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,4 +14,4 @@
     <div class="days-list__item">Sun</div>
 </div>
 
-<app-days-list [daysList]="daysList"></app-days-list>
+<app-month [daysList]="daysList"></app-month>
