--- a/src/app/components/month/month.component.html
+++ b/src/app/components/month/month.component.html
@@ -1,6 +1,6 @@
 <div class="days-list">
-    <app-day-list-item
+    <app-day
         *ngFor="let item of daysList"
         [date]="item"
-    ></app-day-list-item>
+    ></app-day>
 </div>
