--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -5,5 +5,5 @@
     <button
         *ngIf="showDelete"
         class="delete"
-        (click)="delete()">X</button>
+        (click)="delete($event)">X</button>
 </div>
