fix inactive state

--- a/src/app/components/day/day.component.html
+++ b/src/app/components/day/day.component.html
@@ -1,6 +1,6 @@
 <div
     class="cell"
-    [ngClass]="{'cell--inactive': isInactive}"
+    [ngClass]="{'cell--inactive': setIsInactive()}"
     (click)="edit()"
     (dragover)="allowDrop($event)"
     (drop)="drop($event)">
