--- a/src/app/components/task/task.component.scss
+++ b/src/app/components/task/task.component.scss
@@ -1,19 +1,26 @@
 .task {
-    border: 1px solid #ccc;
-    background:rgba(32, 129, 240, .52);
-    border-radius: 2px;
-    padding: 4px;    
-    display: flex;
-    margin-bottom: 8px;
+  border: 1px solid #ccc;
+  background: rgba(32, 129, 240, .52);
+  border-radius: 5px;
+  padding: 4px;
+  display: flex;
+  margin-bottom: 8px;
 }
 
 .text {
-    flex: 1 1;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  flex: 1 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #fff;
 }
 
 .delete {
-    width: 24px;
+  width: 24px;
+  border: none;
+  outline: none;
+  background: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
 }
