--- a/src/app/components/day/day.component.scss
+++ b/src/app/components/day/day.component.scss
@@ -2,77 +2,88 @@ $yellow: rgb(255, 255, 244);
 $inactive-bg: rgb(247, 247, 247);
 $edit-bg: rgb(243, 243, 243);
 $edit-width: 300px;
+$box-inner-shadow: inset 0 0 5px 0 rgba(0, 0, 0, .3);
 
 :host {
-    position: relative;
+  position: relative;
+  display: block;
 }
 
 .cell {
-    border: 1px solid #ccc;
-    height: 150px;
-    overflow: hidden;
-    padding: 10px;
+  border: 1px solid #ccc;
+  height: 105px;
+  overflow: hidden;
+  padding: 10px;
 
-    &:hover {
-        cursor: pointer;
-        background: $yellow;
-    }
+  &:hover {
+    cursor: pointer;
+    background: $yellow;
+    box-shadow: $box-inner-shadow;
+  }
 
-    &--inactive {
-        background: $inactive-bg;
+  &--inactive {
+    background: $inactive-bg;
+
+    .cell-date {
+      color: #999;
     }
+  }
 }
 
 .cell-date {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
+  font-weight: bold;
 }
 
 .edit-popup {
+  position: absolute;
+  top: 0;
+  min-height: 150px;
+  width: 300px;
+  padding: 10px;
+  background: $edit-bg;
+  z-index: 1;
+  display: flex;
+  flex-flow: column;
+  right: -$edit-width - 14px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+
+  .arrow {
+    width: 20px;
+    height: 20px;
     position: absolute;
-    top: 0;
-    min-height: 150px;
-    width: 300px;
-    padding: 10px;
+    top: 50%;
+    transform: rotateZ(45deg) translate(-75%);
+    left: 0;
+    border-left: 2px solid #ccc;
+    border-bottom: 2px solid #ccc;
     background: $edit-bg;
-    z-index: 1;
-    display: flex;
-    flex-flow: column;
-    right: -$edit-width - 14px;
-    border: 2px solid #ccc;
-    border-radius: 10px;
+    z-index: -1;
+  }
+
+  &__task {
+    padding-bottom: 10px;
+  }
+
+  .input {
+    resize: none;
+    padding: 4px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+  }
+
+  &--left {
+    left: -$edit-width - 14px;
 
     .arrow {
-        width: 20px;
-        height: 20px;
-        position: absolute;
-        top: 50%;
-        transform: rotateZ(45deg) translate(-75%);
-        left: 0;
-        border-left: 2px solid #ccc;
-        border-bottom: 2px solid #ccc;
-        background: $edit-bg;
-        z-index: -1;
+      left: initial;
+      right: 0;
+      transform: rotateZ(-45deg) translate(75%);
+      border-left: none;
+      border-right: 2px solid #ccc;
     }
-
-    &__task {
-        padding-bottom: 10px;
-    }
-
-    .input {
-        resize: none;
-
-    }
-
-    &--left {
-        left: -$edit-width - 14px;
-
-        .arrow {
-            left: initial;
-            right: 0;
-            transform: rotateZ(-45deg) translate(75%);
-            border-left: none;
-            border-right: 2px solid #ccc;
-        }
-    }
+  }
 }
